20060916
 - OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2006/09/16 19:53:37
     [deattack.c deattack.h packet.c]
     limit maximum work performed by the CRC compensation attack detector,
     problem reported by Tavis Ormandy, Google Security Team;
     ok markus@ deraadt@
 - (djm) Add openssh.xml to .cvsignore and sort it

20060912
 - (djm) [Makefile.in buildpkg.sh.in configure.ac openssh.xml.in]
   Support SMF in Solaris Packages if enabled by configure. Patch from
   Chad Mynhier, tested by dtucker@

20060911
 - (dtucker) [cipher-aes.c] Include string.h for memcpy and friends.  Noted
   by Pekka Savola.

20060910
 - (dtucker) [contrib/aix/buildbff.sh] Ensure that perl is available.
 - (dtucker) [configure.ac] Add -lcrypt to let DragonFly build OOTB.

20060909
 - (dtucker) [openbsd-compat/bsd-snprintf.c] Add stdarg.h.
 - (dtucker) [contrib/aix/buildbff.sh] Always create privsep user.
 - (dtucker) [buildpkg.sh.in] Always create privsep user.  ok djm@

20060908
 - (dtucker) [auth-sia.c] Add includes required for build on Tru64.  Patch
   from Chris Adams.
 - (dtucker) [configure.ac] The BSM header test needs time.h in some cases.

20060907
 - (djm) [sshd.c auth.c] Set up fakepw() with privsep uid/gid, so it can
   be used to drop privilege to; fixes Solaris GSSAPI crash reported by
   Magnus Abrante; suggestion and feedback dtucker@
   NB. this change will require that the privilege separation user must
   exist on all the time, not just when UsePrivilegeSeparation=yes
 - (tim) [configure.ac] s/BROKEN_UPDWTMP/BROKEN_UPDWTMPX/ on SCO OSR6
 - (dtucker) [loginrec.c] Wrap paths.h in HAVE_PATHS_H.
 - (dtucker) [regress/cfgmatch.sh] stop_client is racy, so give us a better
   chance of winning.

20060905
 - (dtucker) [configure.ac] s/AC_DEFINES/AC_DEFINE/ spotted by Roumen Petrov.
 - (dtucker) [loginrec.c] Include paths.h for _PATH_BTMP.

20060904
 - (dtucker) [configure.ac] Define BROKEN_UPDWTMP on SCO OSR6 as the native